<resources>
    <string name="app_name">Android Parse Example</string>
    <!-- Login -->
    <string name="loginLblUsername">Username</string>
    <string name="loginLblPassword">Password</string>
    <string name="loginBtnLogin">Login</string>
    <string name="userNotActive">This user is not active, please contact with your Company</string>
    <string name="userNotExist">This user not exist</string>
    <string name="errorConnect">Error, please connect later</string>


    <!-- Sign Up -->
    <string name="signUpLblUsername">UserName</string>
    <string name="signUpLblFullName">Full Name</string>
    <string name="signUpLblLastName">Last Name</string>
    <string name="signUpLblBirthDate">Birth Date</string>
    <string name="signUpLblPassword">Password</string>
    <string name="signUpLblConfirmPassword">Confirm Password</string>
    <string name="signUpLblEmail">Email</string>
    <string name="signUpLblPhone1">Phone</string>
    <string name="signUpLblPhone2">Phone 2</string>
    <string name="signUpLblIdentification">Indentification</string>
    <string name="signUpLblUserType">User Type</string>
    <string name="signUpLblSignUp">Sign Up</string>
    <string name="signUpErrorToCreateUser">Error to create user</string>
    <string name="signUpUserInsert">The user XX is inserted</string>

    <!-- colorPrimaryDark is used for the status bar -->
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>


    <!-- General -->
    <string name="generalAppName">Android Parse Example</string>
    <string name="generalSpinnerDefault">Select Item</string>
    <string name="generalValueNull">Error: Value null</string>
    <string name="generalRequiredFields">This field is required</string>
    <string name="generalSuccessfull">Successfull</string>
    <string name="generalRequired">Please review required fields</string>



    //sweet dialog
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="default_progressbar">Default Progressbar:</string>
</resources>
